lab/istio/examples/dark-launch/istio-objects/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test
  namespace: demo
spec:
  hosts:
    - demo.example.com
    - test.demo.svc.cluster.local
  gateways:
    - ingress-gateway
  http:
    - match:
        - headers:
            dark:
              exact: "true"
      route:
        - destination:
            host: test.demo.svc.cluster.local
            subset: v1
    - route:
        - destination:
            host: test.demo.svc.cluster.local
            subset: v1
          weight: 70
        - destination:
            host: test.demo.svc.cluster.local
            subset: v2
          weight: 30
